	functionality is kept intact.
	* Enable glassplayergui to catch and pass '--audio-device' switch to
	glassplayer.
	* Enable glassplayergui to catch and pass '--jack-server-name' switch
	to glassplayer.
	* Enable glassplayergui to catch and pass '--jack-client-name' switch
	to glassplayer.
	* Modify glassplayergui window bar label to show the jackd client
	name when using JACKD audio device, to ease recognition of multiple
	instances.
	* Modify the Metadata Title window bar label from a generic one, to
	one that best matches its coded functionality and comments.
2022-01-13 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'make rpm' to use parallel build.
2022-01-13 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.1.
2022-03-12 Fred Gleason <fredg@paravelsystems.com>
	* Added support to glassplayergui(1) for passing through the
	'--alsa-device', '--file-format', '--file-name', '--mme-device-id',
	'--server-script-down', '--server-script-up' and '--user'
	command-line options.
2022-03-16 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the HLS connector to eliminate shell-outs to curl(1).
2022-03-16 Fred Gleason <fredg@paravelsystems.com>
	* Modified glassplayer(1) so as to print to STDERR only those
	messages with a priority greater than LOG_DEBUG.
	* Modified glassplayer(1) so as to print all to STDERR if the
	'--verbose' flag was given.
2022-03-17 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'INSTALL'.
2022-12-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression that broke the 'make deb' target.
2025-04-08 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up Qt5 warnings.
2025-04-08 Fred Gleason <fredg@paravelsystems.com>
	* Updated Qt5 dependency to Qt6.
2025-04-08 Fred Gleason <fredg@paravelsystems.com>
	* Restored JSON generation code in glassplayer(1).
2025-04-08 Fred Gleason <fredg@paravelsystems.com>
	* Fixed signal/slot connection errors in glassplayergui(1).