@@ -18,6 +18,9 @@
 //   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 //
 
+#include <QJsonDocument>
+#include <QJsonObject>
+
 #include "jsonengine.h"
 
 JsonEngine::JsonEngine()
@@ -53,43 +56,22 @@ void JsonEngine::addEvents(const QString &str)
 
 QString JsonEngine::generate() const
 {
-  QString key="";
-  QString json="";
-  bool ok=false;
+  QJsonDocument jdoc;
 
   if(json_events.size()>0) {
-    json="{\r\n";
+    QJsonObject jo0;
+    QJsonObject jo1;
     for(QMultiMap<QString,QStringList>::const_iterator it=json_events.begin();
 	it!=json_events.end();it++) {
-      if(key!=it.key()) {
-	if(!key.isEmpty()) {
-	  json=json.left(json.length()-3)+"\r\n";
-	  json+="    }\r\n";
-	  json+="}\r\n";
-	  if((it+1)!=json_events.end()) {
-	    json+="{\r\n";
-	  }
-	}
-	key=it.key();
-	json+="    \""+JsonEngine::escape(key)+"\": {\r\n";
+      if(it.value().size()==2) {
+	jo0.insert(it.value().at(0),it.value().at(1));
       }
-      int num=it.value().at(1).toInt(&ok);
-      if(ok) {
-	json+="        \""+JsonEngine::escape(it.value().at(0))+"\": "+
-	  QString::asprintf("%d,\r\n",num);
-      }
-      else {
-	json+="        \""+JsonEngine::escape(it.value().at(0))+"\": "+
-	  "\""+JsonEngine::escape(it.value().at(1))+"\",\r\n";
-      }
+      jo1.insert(it.key(),jo0);
     }
-    // Close the last item
-    json=json.left(json.length()-3)+"\r\n";
-    json+="    }\r\n";
-    json+="}\r\n";
+    jdoc.setObject(jo1);
   }
 
-  return json;
+  return QString::fromUtf8(jdoc.toJson());
 }
 
 
